# dev-playground

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  404.html  MODULE.bazel  README.md  index.html  mkdocs.yml  pyproject.toml  set-me-up.py
.github/workflows/: ci.yaml  docs.yaml  rebase.yml
bazel/: README.md  index.html
cpp/: README.md
cpp/leetcode/: remove_element.cpp  two_sum.cpp
cpp/leetcode/add_two_numbers/: index.html
cpp/leetcode/merge_arrays/: index.html
cpp/leetcode/remove_element/: index.html
cpp/leetcode/two_sum/: index.html
docs/: UV_README.md  index.md
docs/cpp/leetcode/: add_two_numbers.md  merge_arrays.md  remove_element.md  two_sum.md
docs/github_actions/: README.md
docs/source/: conf.py  generate_index.py
docs/uv/: README.md
github_actions/: index.html
python/: README.md
python/image_describer/: README.md  index.html
python/image_describer/tests/: test_describer.py
python/packaging_example/: README.md  index.html
python/packaging_example/src/packaging_example/: example.py
python/standalone_scripts/: index.html
search/: search_index.json
src/bazel/: README.md
src/cpp/: mkdocs.yml
src/cpp/leetcode/: BUILD  add_two_numbers.cpp
src/cpp/particle_filter/: BUILD
src/cpp/particle_filter/include/: particle.hpp  particle_filter.hpp  point.hpp
src/cpp/particle_filter/test/: particle_test.cpp  point_test.cpp
src/docs/source/: generate_index.py  index.md
src/flutter/meal_plan/: README.md  pubspec.yaml
src/flutter/meal_plan/android/app/: build.gradle.kts
src/flutter/meal_plan/ios/Runner/: Info.plist
src/flutter/meal_plan/ios/Runner.xcodeproj/: project.pbxproj
src/flutter/meal_plan/linux/: CMakeLists.txt
src/flutter/meal_plan/test/: widget_test.dart
src/flutter/meal_plan/web/: index.html  manifest.json
src/flutter/meal_plan/windows/: CMakeLists.txt
src/github/: README.md
src/python/: mkdocs.yml
src/python/image_describer/: .gitignore  pyproject.toml
src/python/image_describer/src/image_describer/: __main__.py  describer.py
src/python/image_describer/tests/: test_describer.py
src/python/standalone_scripts/: create_python_project_folder_structure.py  pass_by_reference.py  progress_bar_for_parallel_processes.py
training/cpp/leetcode/: BUILD  add_two_numbers.md  merge_arrays.cpp  merge_arrays.md  remove_element.cpp  remove_element.md  two_sum.md
training/python/: argparse_action_store_true.py  create_python_project_folder_structure.py  mutable_method_arguments.py  pass_by_reference.py  type_hints.py
training/python/image_describer/: LICENSE.md  README.md
training/python/image_describer/image_describer/: __main__.py
training/python/packaging_example/: README.md  pyproject.toml
training/python/standalone_scripts/: README.md  argparse_action_store_true.py  progress_bar_for_parallel_processes.py  type_hints.py
training/python/tests/: test_example.py
uv/: index.html
(+16 files in other folders)
