[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
