[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "furo>=2024.8.6",
    "ipdb>=0.13.13",
    "myst-parser>=4.0.1",
    "pillow>=11.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0",
]

# Tools config
[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = ["training/python/packaging_example"]
