[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "furo>=2024.8.6",
    "ipdb>=0.13.13",
    "linkify-it-py>=2.0.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-monorepo-plugin>=1.1.2",
    "myst-parser>=4.0.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

# Tools config
[tool.ruff]
line-length = 120
lint.extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.workspace]
members = [
    "src/python/packaging_example",
    "src/python/image_describer"
]
